deployment/order/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-app
  ports:
    - protocol: TCP
      name: web
      port: 8081
      targetPort: 8081
  type: NodePort
